--- a/config/external-dns.yml
+++ b/config/external-dns.yml
@@ -52,7 +52,8 @@ spec:
       - name: external-dns
         image: registry.k8s.io/external-dns/external-dns:v0.13.1
         args:
-        - --source=service # ingress is also possible
+        # - --source=service
+        - --source=ingress
         #- --domain-filter=example.com # (optional) limit to only example.com domains; change to match the zone created above.
         #- --zone-id-filter=023e105f4ecef8ad9ca31a8372d0c353 # (optional) limit to a specific zone.
         - --provider=cloudflare
