--- a/config/hello2.yml
+++ b/config/hello2.yml
@@ -1,4 +1,9 @@
-# https://www.linode.com/docs/guides/how-to-deploy-nginx-ingress-on-linode-kubernetes-engine/
+# http://k8s-test-hello2.erosson.org/
+#
+# based on https://www.linode.com/docs/guides/how-to-deploy-nginx-ingress-on-linode-kubernetes-engine/
+#
+# also learned from https://mbuffett.com/posts/kubernetes-setup/
+# https://news.ycombinator.com/item?id=26502900
 apiVersion: v1
 kind: Service
 metadata:
@@ -37,7 +42,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: my-new-ingress2
+  name: hello-two
   annotations:
     external-dns.alpha.kubernetes.io/hostname: k8s-test-hello2.erosson.org
     kubernetes.io/ingress.class: nginx
