--- a/config/hello2.yml
+++ b/config/hello2.yml
@@ -8,9 +8,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-two
-  annotations:
-    external-dns.alpha.kubernetes.io/hostname: k8s-test-hello2.erosson.org
-    #external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
 spec:
   type: ClusterIP
   ports:
@@ -45,6 +42,7 @@ metadata:
   name: hello-two
   annotations:
     external-dns.alpha.kubernetes.io/hostname: k8s-test-hello2.erosson.org
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
