--- a/config/hello1.yml
+++ b/config/hello1.yml
@@ -41,10 +41,16 @@ kind: Ingress
 metadata:
   name: hello-one
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: k8s-test-hello1.erosson.org
-    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
     kubernetes.io/ingress.class: nginx
+    external-dns.alpha.kubernetes.io/hostname: k8s-test-hello1.erosson.org
+    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    # cert-manager.io/cluster-issuer: letsencrypt-staging
+    # cert-manager.io/cluster-issuer: letsencrypt
 spec:
+  # tls:
+    # - secretName: hello-one-tls
+      # hosts:
+        # - k8s-test-hello1.erosson.org
   rules:
   - host: k8s-test-hello1.erosson.org
     http:
