--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,7 +11,7 @@ tasks:
       ./argocd/auth.sh
       ./.gp/install-argocd-image-updater-cli.sh
       ./.gp/install-kustomize.sh
-      echo "alias argocd='argocd --port-forward-namespace argocd'" > ~/.bashrc
+      echo "alias argocd='argocd --port-forward-namespace argocd'" >> ~/.bashrc
     command: |
       kubectl version
       helm version
