commonlabels with kustomize

--- a/examples/test-letsencrypt-staging.erosson.org/test-letsencrypt-staging.yml
+++ b/examples/test-letsencrypt-staging.erosson.org/test-letsencrypt-staging.yml
@@ -18,12 +18,8 @@ metadata:
 spec:
   replicas: 1
   selector:
-    matchLabels:
-      app: test-letsencrypt-staging
+    matchLabels: {} # kustomize commonLabels populates this, and spec.template.metadata.labels below
   template:
-    metadata:
-      labels:
-        app: test-letsencrypt-staging
     spec:
       containers:
       - name: hello
