--- a/packages/erosson/multiplayer/kustomization.yml
+++ b/packages/erosson/multiplayer/kustomization.yml
@@ -1,4 +1,3 @@
-# https://github.com/kubernetes-sigs/kustomize/blob/master/examples/image.md
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
@@ -7,12 +6,21 @@ metadata:
 commonLabels:
   app.kubernetes.io/instance: test-multiplayer.erosson.org
 
+# https://github.com/kubernetes-sigs/kustomize/blob/master/examples/image.md
 images:
 - name: ghcr.io/erosson/multiplayer/server
   newTag: latest
 - name: ghcr.io/erosson/multiplayer/www
   newTag: latest
-  
+
+# https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#generate-configmaps-from-files
+configMapGenerator:
+- name: test-multiplayer-www-env
+  files:
+  - www-env.json
+- name: test-multiplayer-server-env
+  files:
+  - server-env.json
 
 resources:
 - server.yml
