--- a/packages/erosson/multiplayer/www.yml
+++ b/packages/erosson/multiplayer/www.yml
@@ -60,9 +60,9 @@ spec:
         ports:
         - containerPort: 80
         volumeMounts:
-        - name: config-volume
-          mountPath: /usr/share/nginx/html/config
+        - name: env-volume
+          mountPath: /usr/share/nginx/html/env
       volumes:
-      - name: config-volume
+      - name: env-volume
         configMap:
           name: test-multiplayer-www-env
