--- a/packages/erosson/chrom-graph/www.yml
+++ b/packages/erosson/chrom-graph/www.yml
@@ -18,13 +18,14 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     external-dns.alpha.kubernetes.io/hostname: chrom-graph.erosson.org
-    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
-    cert-manager.io/cluster-issuer: letsencrypt
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    # cert-manager.io/cluster-issuer: letsencrypt
+    # cert-manager.io/cluster-issuer: letsencrypt-staging
 spec:
-  tls:
-    - secretName: chrom-graph-tls
-      hosts:
-        - chrom-graph.erosson.org
+  # tls:
+    # - secretName: chrom-graph-tls-staging
+      # hosts:
+        # - chrom-graph.erosson.org
   rules:
   - host: chrom-graph.erosson.org
     http:
