--- a/packages/erosson/chrom-graph/argocd.yml
+++ b/packages/erosson/chrom-graph/argocd.yml
@@ -4,6 +4,9 @@ kind: Application
 metadata:
   name: chrom-graph.erosson.org
   namespace: argocd
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: main=ghcr.io/erosson/chrom-graph:latest
+    argocd-image-updater.argoproj.io/main.update-strategy: digest
 spec:
   project: default
   source:
